--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=200.73.134.44;Database=CamionesEF;User Id=sa;Password=Nacion1846;TrustServerCertificate=True"
+    "DefaultConnection": "Server=200.73.134.44;Database=CamionesEF;User Id=sa;Password=;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
